--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">QQdemo</string>
+    <string name="user_name">用户名</string>
+    <string name="password">密码</string>
+    <string name="login">登录</string>
+    <string name="new_user">新用户</string>
+    <string name="confirm_password">确认密码</string>
+    <string name="register">注册</string>
 </resources>
